# GothicMultiplayer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GMP.sln  LICENSE  LICENSES  README.md  vcpkg.json
.github/workflows/: build.yml
BugTrap/: LICENSE
GMP_Client/: Button.cpp  Button.h  CActiveAniID.cpp  CActiveAniID.h  CAnimMenu.cpp  CAnimMenu.h  CChat.cpp  CChat.h  CConfig.cpp  CConfig.h  CFollowNpc.cpp  CFollowNpc.h  CGmpClient.cpp  CGmpClient.h  CGothicPatcher.cpp  CHeroClass.cpp  CHeroClass.h  CIngame.cpp  CIngame.h  CInterpolatePos.cpp  CInterpolatePos.h  CInventory.cpp  CInventory.h  CLanguage.cpp  CLanguage.h  CLocalPlayer.cpp  CLocalPlayer.h  CLog.cpp  CLog.h  CMainMenu.cpp  CMainMenu.h  CMakeLists.txt  CMap.cpp  CMap.h  CMenu.cpp  CMenu.h  CObjectMenu.cpp  CObjectMenu.h  CObservation.cpp  CObservation.h  (+57 more)
GMP_Client/PacketHandlers/: Connection.hpp  Game.hpp
GMP_Client/Voice/: CMakeLists.txt  VoiceCapture.h  VoicePlayback.cpp
GMP_Client/Voice/VoiceTestApp/: CMakeLists.txt  voice_test_app.cpp
GMP_Client/WorldBuilder/: CBuilder.cpp  CBuilder.h  load.cpp  load.h  save.cpp  save.h
GMP_Client/dx7sdk/inc/: d3dtypes.h
GMP_Client/g2api/: CMakeLists.txt  constants.hpp  g2Api.h  ocanictrl_human.hpp  ocgame.cpp  ocgame.hpp  ocmob.hpp  ocnpc.hpp  ocnpcinventory.hpp  ocobjectfactory.hpp  ocspawnmanager.hpp  ocspell.hpp  ocviewprogressbar.hpp  ocviewstatusbar.hpp  ocvob.hpp  ocworld.hpp  utils.h  zCCsPlayer.h  zCQuat.hpp  zcbuffer.hpp  zccamera.hpp  zcclassdef.hpp  zcfont.hpp  zcmesh.hpp  zcmodel.hpp  zcoption.hpp  zcparticlefx.hpp  zcrenderer.hpp  zcsoundsystem.hpp  zcvob.hpp  zcwaynet.hpp  zcworld.hpp  zstring.hpp  ztypes.inl
GMP_Client/res/: cws.rgn
GMP_Client/zNet/: CMakeLists.txt  znet_client.h
GMP_Client/znet_rak/: CMakeLists.txt  client.cpp  client.h
GMP_Serv/: CClasses.cpp  CClasses.h  CCompression.cpp  CCompression.h  CConfig.cpp  CConfig.h  CGenericFile.cpp  CGenericFile.h  CGmpServ.cpp  CGmpServ.h  CLog.cpp  CLog.h  CMakeLists.txt  CPermissions.cpp  CPermissions.h  CSpawnList.cpp  CSpawnList.h  CWBFile.cpp  CWBFile.h  GMP_Serv.cpp  GMP_Serv.vcxproj  GMP_Serv.vcxproj.filters  HTTPServer.cpp  HTTPServer.h  LuaSpdlogFuncs.cpp  LuaSpdlogFuncs.h  Script.cpp  Script.h  character_definition.cpp  character_definition.h  class.xml  config.cpp  config.h  config.txt  crypt.cpp  crypt.h  game_server.cpp  game_server.h  gothic_clock.cpp  gothic_clock.h  (+6 more)
GMP_Serv/Lua/: event_bind.cpp  event_bind.h  function_bind.cpp  function_bind.h  spdlog_bind.cpp  spdlog_bind.h
GMP_Serv/server_resources/: class.json  class.xml  config.toml  config.txt  moderators  permissions
GMP_Serv/server_resources/scripts/: main.lua  script.lua
GMP_Serv/znet/: CMakeLists.txt  znet_server.h
GMP_Serv/znet_rak/: CMakeLists.txt  server.cpp  server.h
GMP_Starter/: CGothicStarter.cpp  CGothicStarter.h  GMP_Starter.vcxproj  GMP_Starter.vcxproj.filters  GMP_starter.cpp  resource.rc
InjectMage/: InjectMage.h  InjectMage.lib
Multiplayer/: AnimMenu.txt
Multiplayer/lang/: PL.lang  de.lang  en.lang  index  ru.lang
RakNet/: CMakeLists.txt
Shared/: CCompression.cpp  CCompression.h  CMakeLists.txt  SharedUtil.h  TomlWrapper.cpp  TomlWrapper.h  event.cpp  event.h  math.cpp  toml_wrapper.cpp
Shared/include/shared/: math.h
WorldBuilder/: g2mobs.wb  g2particles.wb
common/: CMakeLists.txt  common.h  singleton.h  version.h
common/znet/: common_structs.h  net_enums.h  packets.h
g2api/: cgamemanager.hpp  macros.hpp  ocgame.hpp  ocitem.hpp  ocmob.hpp  ocmsg.hpp  ocnpc.hpp  ocviewgothicprogressbar.hpp  ocviewstatusbar.hpp  ocworldtimer.hpp  oczone.hpp  osheader.hpp  zcaicamera.hpp  zcaiplayer.hpp  zcarchiver.hpp  zcarchiverfactory.hpp  zcbsptree.hpp  zcconsole.hpp  zceffect.hpp  zceventmanager.hpp  zcinput.hpp  zcinputcallback.hpp  zcmenu.hpp  zcmover.hpp  zcobject.hpp  zcoption.hpp  zcpar_symbol.hpp  zcparser.hpp  zcrenderer.hpp  zcsession.hpp  zcskycontroller.hpp  zctexture.hpp  zctimer.hpp  zcview.hpp  zcvisual.hpp  zcvob.hpp  zfile.hpp  zstring.hpp  ztypes.hpp
tests/: CMakeLists.txt  connection_test.cpp
triplets/: x64-linux.cmake  x86-linux.cmake  x86-windows.cmake
